[project]
name = "ActionTest"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "GuGuMur", email = "2221533105@qq.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
